fix: 수정된 serif 글꼴 유틸리티의 letter-spacing 값 조정

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -200,11 +200,11 @@ html, body {
 @utility text-body-sm { font-size:1rem; line-height: 1.6rem; font-weight: 400; letter-spacing: 0.04em; font-family: var(--font-sans); }
 
 /* JEN Serif */
-@utility text-display-serif { font-size:3.6rem; line-height: 4.6rem; font-weight: 400; letter-spacing: 0.6em; font-family: var(--font-serif); }
-@utility text-headline-lg-serif { font-size:3.2rem; line-height: 4rem; font-weight: 400; letter-spacing: 0.2em; font-family: var(--font-serif); }
-@utility text-headline-md-serif { font-size:2.4rem; line-height: 3.2rem; font-weight: 400; letter-spacing: 0.2em; font-family: var(--font-serif); }
-@utility text-headline-sm-serif { font-size:2rem; line-height: 2.4rem; font-weight: 400; letter-spacing: 1.2rem;  font-family: var(--font-serif); }
-@utility text-label-serif { font-size:1.4rem; line-height: 2rem; font-weight: 400; letter-spacing: 0.4rem; font-family: var(--font-serif); }
+@utility text-display-serif { font-size:3.6rem; line-height: 4.6rem; font-weight: 400; letter-spacing: 0.06em; font-family: var(--font-serif); }
+@utility text-headline-lg-serif { font-size:3.2rem; line-height: 4rem; font-weight: 400; letter-spacing: 0.02em; font-family: var(--font-serif); }
+@utility text-headline-md-serif { font-size:2.4rem; line-height: 3.2rem; font-weight: 400; letter-spacing: 0.02em; font-family: var(--font-serif); }
+@utility text-headline-sm-serif { font-size:2rem; line-height: 2.4rem; font-weight: 400; letter-spacing: 0.12rem;  font-family: var(--font-serif); }
+@utility text-label-serif { font-size:1.4rem; line-height: 2rem; font-weight: 400; letter-spacing: 0.04rem; font-family: var(--font-serif); }
 
 
 /* Layout */
